# AeroBoarEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pre_setup.ps1  project-plan.md  setup_project.ps1
config/: accessibility.json
docs/: project-plan.md
include/assets/: gltf_loader.hpp
include/core/: renderer.hpp  transfer_manager.hpp  window_interface.hpp
include/input/: input_manager.hpp
shaders/: cel_shading.frag  pbr.frag  pbr.vert  tessellation.tesc  tessellation.tese
src/: main.cpp
src/assets/: gltf_loader.cpp
src/core/: renderer.cpp  transfer_manager.cpp  window_factory.cpp
src/input/: input_manager.cpp
